# rapid-vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  env.cmd  env.sh
.circleci/: config.yml
.github/workflows/: windows-ci.yml  windows-ci.yml.disabled
dev/: CMakeLists.txt  TODO.md  rv.cpp  rv.h
dev/docker/: build.sh  docker-entrypoint.sh  run.sh  tag.txt
dev/docker/android/: Dockerfile  build.sh  tag.txt
dev/docker/desktop/: build.sh  entrypoint.sh  launch.sh  run.sh
dev/docker/linux/: Dockerfile
dev/docker/vulkan-base-image/: Dockerfile  build.sh  run.sh  tag.txt  test.sh  upload.sh
dev/docker/windows/: Dockerfile  build.ps1  ci.ps1  launch.ps1  push-to-github.ps1  run.ps1  tag.txt
dev/env/: alias.bash.txt  alias.powershell.txt  bootstrap.sh  env.ps1  env.rc
dev/experimental/: CMakeLists.txt  common.h  streaming.cpp
dev/sample/: CMakeLists.txt  alternative-namespace.cpp  clear-screen.cpp  drawable.cpp  external-loader.cpp  hello-world.cpp  noop-compute.cpp  pipeline-args.cpp  simple-triangle.cpp  triangle.cpp  use-with-volk-loader.cpp  use-with-volk.cpp
dev/sample/shader/: noop.comp  noop.comp.spv  noop.comp.spv.h  pipeline.frag  pipeline.frag.spv  pipeline.frag.spv.h  pipeline.vert  pipeline.vert.spv  pipeline.vert.spv.h  simple-triangle.frag.spv  simple-triangle.frag.spv.h  simple-triangle.vert  simple-triangle.vert.spv  simple-triangle.vert.spv.h  triangle.frag  triangle.frag.spv.h  triangle.vert.spv  triangle.vert.spv.h
dev/test/: CMakeLists.txt  args-test.cpp  buffer-test.cpp  built-in-loader.cpp  compute-test.cpp  drawable-test.cpp  graphics-test.cpp  image-test.cpp  perf-test.cpp  queue-test.cpp  rdc.h  rvi.cpp  sample-test.cpp  smoke-test.cpp  test-instance.h  test-main.cpp  with-volk.cpp
dev/test/shader/: argument-test.comp  argument-test.comp.spv  argument-test.comp.spv.h  blue-color.frag.spv  blue-color.frag.spv.h  clear-screen.frag.spv  clear-screen.frag.spv.h  clear-screen.vert  clear-screen.vert.spv  clear-screen.vert.spv.h  full-screen.vert  full-screen.vert.spv  full-screen.vert.spv.h  noop.comp.spv  noop.comp.spv.h  passthrough-2d.vert  passthrough-2d.vert.spv  passthrough-2d.vert.spv.h  texture-array.frag  texture-array.frag.spv  texture-array.frag.spv.h
inc/: rapid-vulkan.h
inc/rapid-vulkan/: rapid-vulkan.cpp  rapid-vulkan.h
src/: rapid-vulkan.cpp  rapid-vulkan.h
